# rust-zero-to-prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
configuration/: production.yaml
migrations/: 20240313165226_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
src/utils/: validation.rs
tests/: health_check.rs
